# dune-structures

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  config.h.cmake  docker-compose.yml  dune-structures.pc.in  dune.module
app/: CMakeLists.txt  structures.cc
apps/: CMakeLists.txt  cell3d_p1.cc  cell3d_p2.cc  gmsh2d_p2.cc  structured2d_p2.cc  structured3d_p1.cc
apps/cube/: CMakeLists.txt  cubeapp.cc  cubeapp.ini  cubeapp.ufl  iterative_compress.ini  linearized_compress.ini
apps/dynamics/: CMakeLists.txt  dynamicsapp.cc  linear_dyncube.ini  neohookean_dyncube.ini  stvenant_dyncube.ini
apps/dyncube/: CMakeLists.txt  dyncubeapp.cc  dyncubeapp.ini  linear.ini  neohookean.ini  stvenant.ini
apps/fenics/: CMakeLists.txt  fenics.mini
apps/grids/: CMakeLists.txt  testgrid.cc  testgrid.yml
apps/simplecell/: CMakeLists.txt  polarised.yml  round.yml  simplecell.cc  simplecell.ini  simplecell.ufl  simplecell.yml  spread.yml
apps/universal/: CMakeLists.txt  fibrecube.ini  iterative_cube_compress.ini  linearized_cube_compress.ini  quasistatic.ini  robert.ini  robert2.ini  simplecell.ini  twod_beam.ini  universalapp.cc
cmake/modules/: DuneBlocklabMacros.cmake  DuneStructuresMacros.cmake  FindGmsh.cmake  cmspandoc.cmake  extract_meshfile.py  pandocology.cmake
doc/: CMakeLists.txt  gitlab-math.lua  olddoc.md
docker/: Dockerfile  README.md  base.dockerfile  build-env.dockerfile  build.sh  build_and_deploy.sh  config.opts  entry.py  frontend.dockerfile
dune/: CMakeLists.txt
dune/blocklab/: CMakeLists.txt  solver.hh
dune/blocklab/blocks/: CMakeLists.txt  adaptivity.hh  blockbase.hh  blocktraits.hh  constraints.hh  control.hh  error.hh  filelogger.hh  instationary.hh  interpolation.hh  linearsolver.hh  newton.hh  parameter.hh  probe.hh  variation.hh  visualization.hh
dune/blocklab/blocks/test/: CMakeLists.txt  providersetup.hh  testadaptivity.cc  testconstraints.cc  testcontrol.cc  testerror.cc  testfilelogger.cc  testinterpolation.cc  testlinearsolver.cc  testnewton.cc  testparameter.cc  testprobe.cc  testvariation.cc  testvisualization.cc
dune/blocklab/construction/: CMakeLists.txt  callabletree.hh  context.hh  dataparser.hh  muparser.hh  registry.hh
dune/blocklab/grids/: CMakeLists.txt  capabilities.hh  concept.hh  gmsh.hh  structured.hh
dune/blocklab/operators/: CMakeLists.txt  convectiondiffusionfem.hh  virtualinterface.hh
dune/structures/: CMakeLists.txt  callableadapters.hh  elasticity.hh  enumerate.hh  eulerbernoulli.hh  fiberparameters.hh  geometry.hh  gmshfactory.hh  gridconstruction.hh  gridprovider.hh  gridreorder.hh  lxnorm.hh  material.hh  muparser.hh  onetoone.hh  operatorinterface.hh  parametrizedcurves.hh  prestress.hh  registry.hh  reinforcedoperator.hh  solverconstruction.hh  stress.hh  timecapsule.hh  transitionsolver.hh  uniquevariant.hh  utilities.hh  visualization.hh  vonmises.hh
examples/: README.md
examples/implicitfiber/: implicitfiber.xml  implicitfiber.yml
experiments/: CMakeLists.txt
experiments/fiber_positioning/: CMakeLists.txt  hansbo_beam.ini  run_all.sh  run_experiments.py  run_plot.py
experiments/hansbo_reproduction/: CMakeLists.txt  fig23_1.ini  fig23_1.xml  fig23_1.yml  fig23_2.ini  fig23_2.xml  fig23_2.yml  fig23_3.ini  fig23_3.xml  fig23_3.yml  fig23_3_prestress.yml  fig24_1.ini  fig24_1.xml  fig24_1.yml  fig24_2.ini  fig24_2.xml  fig24_2.yml
experiments/mixeddim_validation/: CMakeLists.txt  bulkstress.pvsm  hansbo_beam.ini  hansbo_beam.yml  hansbo_strech.yml  hansbo_stretch.ini  hansbo_truss.ini  hansbo_truss.yml
my-apps/: CMakeLists.txt  Res_cell.yml  my_cell2d_p2.cc  scheiwe.msh
operators/: CMakeLists.txt  operators.ini  operators.ufl
python/: CMakeLists.txt  setup.py
test/: CMakeLists.txt  cube.msh  cube.yml  test-fiber-intersection.cc  test-parameter-assign.cc
test/construction/: CMakeLists.txt  construction.cc  solver1.ini
test/fenics/: fenics.mini  fenics.ufl
test/material/: CMakeLists.txt  dummy.ufl  material.ini  materialgrid.yml  testmaterial.cc
test/mesh/: CMakeLists.txt  grid.ini  testgrid.cc  testgrid.yml
test/muparser/: CMakeLists.txt  muparser.cc
test/nonlinear/: CMakeLists.txt  nonlinear.ini  nonlinear.ufl  testnonlinear.cc
test/vonmises/: CMakeLists.txt  testvonmises.cc  vonmises.ini  vonmises.ufl
(+82 files in other folders)
